<resources>
    <string name="app_name">HhRuTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_profile">Вход в личный кабинет</string>
    <string name="search_work">Поиск работы</string>
    <string name="email_or_phone">Электронная почта или телефон</string>
    <string name="continue_text">Продолжить</string>
    <string name="sign_in_w_password">Войти с паролем</string>
    <string name="search_workers">Поиск сотрудников</string>
    <string name="search_workers_text">Я ищу сотрудников</string>
    <string name="send_code_to_email_text">Отправили код на %1$s</string>
    <string name="access_text">Подтвердить</string>
    <string name="now_watching_count_text">Сейчас просматривает </string>
    <string name="vacancy_title_text">UI/UX Designer</string>
    <string name="vacancy_city_text">Минск</string>
    <string name="your_tasks_text">Ваши задачи</string>
    <string name="you_can_ask_employer_text">Задайте вопрос работодателю</string>
    <string name="he_will_receive_it_text">Он получит его с откликом на вакансию</string>
    <string name="add_accompanying_text">Добавить сопроводительное</string>
    <string name="respond_text">Откликнуться</string>
    <string name="ui_ux_designer">UI/UX дизайнер</string>
    <string name="resume_for_respond">Резюме для отклика</string>
    <string name="warning_text">Вы ввели неверный email.</string>
    <string name="enter_the_code_text">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>

</resources>