<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.hhrutest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.hhrutest.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_responses"
        android:name="com.example.hhrutest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.hhrutest.ui.sign_in.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_enterCodeFragment"
            app:destination="@id/enterCodeFragment" />
    </fragment>
    <fragment
        android:id="@+id/enterCodeFragment"
        android:name="com.example.hhrutest.ui.sign_in.EnterCodeFragment"
        android:label="fragment_enter_code"
        tools:layout="@layout/fragment_enter_code">
        <action
            android:id="@+id/action_enterCodeFragment_to_navigation_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>